syntax = "proto3";

package database;

option go_package = "/Users/stepanbezhuk/work/Beckend/ShopperBE/db-service/proto/database;database";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service DatabaseService {
  rpc ExecuteQuery (ExecuteQueryRequest) returns (ExecuteQueryResponse);
}

message ExecuteQueryRequest {
  string query = 1;
  repeated QueryParam params = 2;
}

message ExecuteQueryResponse {
  string result = 1;
  string error = 2;
  string code = 3;
  string details = 4;
}

message QueryParam {
  oneof value {
    string str_value = 1;
    int64 int_value = 2;
    uint64 uint_value = 3;
    float float_value = 4;
    double double_value = 5;
    bool bool_value = 6;
    bytes bytes_value = 7;
    google.protobuf.Timestamp time_value = 8;
  }
}